Decrease record-sidebar max-width on large screens (400px to 250px), and put a max-width on recordWithSidebar, to prevent it from wrapping under the sidebar when there are long non-wrapping values

--- a/src/qqq/styles/qqq-override-styles.css
+++ b/src/qqq/styles/qqq-override-styles.css
@@ -833,14 +833,21 @@ input[type="search"]::-webkit-search-results-decoration
 {
    .recordSidebar
    {
-      max-width: 400px !important;
+      width: 250px !important;
+      max-width: 250px !important;
    }
 
    .recordWithSidebar
    {
-      max-width: 100% !important;
+      max-width: calc(100vw - 520px) !important;
       flex-grow: 1 !important;
    }
+}
+
+.recordWithSidebar .MuiGrid-grid-lg-12
+{
+   /* this helps make sure the overflow-wrap: break-word always applies */
+   max-width: 100%;
 }
 
 .stickyBottomButtonBar
